adding some documentation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "type": "git",
     "url": "git://github.com/office-pc-ub/online-store.git"
   },
-  "author": "office-pc-ub",
+  "author": "Ronald Suez",
   "license": ""
 }
